--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>MyMarket</title>
+  <title>LABUBU WORLD</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
   <header>
-    <h1>MyMarket</h1>
+    <h1>LABUBU WORLD</h1>
     <button id="cartBtn"> Корзина (<span id="cartCount">0</span>)</button>
   </header>
 
@@ -27,7 +27,7 @@
       <span id="closeCart" class="close">&times;</span>
       <h2>Корзина</h2>
       <ul id="cartItems"></ul>
-      <p>Итого: <span id="cartTotal">0</span> руб.</p>
+      <p>Итого: <span id="cartTotal">0</span> €.</p>
       <button id="checkoutBtn" class="btn-primary">Оформить заказ</button>
     </div>
   </div>
