--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <h1>LABUBU WORLD</h1>
     <button id="cartBtn">
-      <i class="fas fa-shopping-cart"></i>
+      <i class="fas fa-shopping-basket"></i>
       <span id="cartCount">0</span>
     </button>
   </header>
